--- a/SmartKitty/SmartKitty/Base.lproj/Main.storyboard
+++ b/SmartKitty/SmartKitty/Base.lproj/Main.storyboard
@@ -90,19 +90,19 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Home" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MQp-pO-Koc">
-                                <rect key="frame" x="10" y="64" width="394" height="34"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                <rect key="frame" x="10" y="54" width="394" height="40"/>
+                                <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="34"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xi2-0R-m5o">
-                                <rect key="frame" x="10" y="108" width="394" height="18"/>
+                                <rect key="frame" x="10" y="104" width="394" height="18"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="oSd-Dh-NWx">
-                                <rect key="frame" x="10" y="156" width="394" height="250"/>
+                                <rect key="frame" x="10" y="152" width="394" height="250"/>
                                 <color key="backgroundColor" systemColor="systemGray5Color" red="0.8980392157" green="0.8980392157" blue="0.91764705879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="250" id="pse-R9-LeN"/>
@@ -181,7 +181,7 @@
                             <constraint firstItem="xwF-e9-mzQ" firstAttribute="trailing" secondItem="oSd-Dh-NWx" secondAttribute="trailing" constant="10" id="2mC-ij-col"/>
                             <constraint firstItem="oSd-Dh-NWx" firstAttribute="top" secondItem="xi2-0R-m5o" secondAttribute="bottom" constant="30" id="5r5-gM-ybU"/>
                             <constraint firstItem="xi2-0R-m5o" firstAttribute="top" secondItem="MQp-pO-Koc" secondAttribute="bottom" constant="10" id="Ajv-Y2-pFh"/>
-                            <constraint firstItem="MQp-pO-Koc" firstAttribute="top" secondItem="xwF-e9-mzQ" secondAttribute="top" constant="20" id="Gom-GB-X1X"/>
+                            <constraint firstItem="MQp-pO-Koc" firstAttribute="top" secondItem="xwF-e9-mzQ" secondAttribute="top" constant="10" id="Gom-GB-X1X"/>
                             <constraint firstItem="MQp-pO-Koc" firstAttribute="leading" secondItem="xwF-e9-mzQ" secondAttribute="leading" constant="10" id="cCh-Yb-OmG"/>
                             <constraint firstItem="xi2-0R-m5o" firstAttribute="leading" secondItem="xwF-e9-mzQ" secondAttribute="leading" constant="10" id="kGD-ot-ShM"/>
                             <constraint firstItem="xwF-e9-mzQ" firstAttribute="trailing" secondItem="xi2-0R-m5o" secondAttribute="trailing" constant="10" id="uWw-o5-c12"/>
